// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/styled-components > should apply styledComponents option to swc-loader 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "mode": undefined,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "plugins": [
              [
                "<ROOT>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                {
                  "displayName": true,
                  "pure": false,
                  "ssr": false,
                  "transpileTemplateLiterals": true,
                },
              ],
            ],
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should enable ssr option when target contains node 1`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "targets": [
            "node >= 16",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "plugins": [
              [
                "<ROOT>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                {
                  "displayName": true,
                  "pure": false,
                  "ssr": true,
                  "transpileTemplateLiterals": true,
                },
              ],
            ],
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
  ],
}
`;

exports[`plugins/styled-components > should enable ssr option when target contains node 2`] = `
{
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
    /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
  ],
  "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "mode": undefined,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "isModule": "unknown",
        "jsc": {
          "experimental": {
            "plugins": [
              [
                "<ROOT>/node_modules/<PNPM_INNER>/@swc/plugin-styled-components/swc_plugin_styled_components.wasm",
                {
                  "displayName": true,
                  "pure": false,
                  "ssr": true,
                  "transpileTemplateLiterals": true,
                },
              ],
            ],
          },
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": false,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorVersion": "2022-03",
            "legacyDecorator": false,
          },
        },
      },
    },
  ],
}
`;
